...
                android:fontFamily="@font/hp_simplified"
                android:text="FirstName LastName"
                android:textColor="@color/munchGreenDark"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/city_and_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/hp_simplified"
                android:text="Austin, Texas"
                android:textColor="@color/munchGreenDark"
                android:textSize="20sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@color/munchGreyLight" />

                    <TextView
                        android:id="@+id/manage_trucks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/rambla"
                        android:letterSpacing="0.05"
...
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@color/munchGreyLight" />

                    <TextView
                        android:id="@+id/list_truck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/rambla"
                        android:letterSpacing="0.05"
...
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@color/munchGreyLight" />

                    <TextView
                        android:id="@+id/learn_about_listing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/rambla"
                        android:letterSpacing="0.05"
...

                <Space
                    android:id="@+id/left_spacer3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintHorizontal_weight=".5"
                    app:layout_constraintRight_toLeftOf="@id/sign_in_out"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/sign_in_out"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_shape"
                    android:backgroundTint="@color/munchOrangeDark"
                    android:fontFamily="@font/rambla"
                    android:text="SIGN IN"
                    android:textColor="@color/munchOrangeDark"
                    android:textSize="25sp"
                    app:layout_constraintHorizontal_weight="9"
                    app:layout_constraintLeft_toRightOf="@id/left_spacer3"
                    app:layout_constraintRight_toLeftOf="@id/right_spacer3"
                    app:layout_constraintTop_toTopOf="parent" />
...
