<resources>
    <string name="hello">Hello</string>
    <string name="first_name">Guest</string>
    <string name="near_you">Near You</string>
    <string name="catagories">Catagories</string>
    <string name="recommended">Recommended</string>

    <string name="app_name">Munch</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">    Email</string>
    <string name="prompt_password">    Password</string>
    <string name="action_sign_up"><u>SIGN UP</u></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="abtDescriptionTxt">Munch is real-time food truck locator. It\'s purpose is to allow food truck owners to update their customers in real-time regarding their location, hours, and any other updates. In addition, customers are allowed to rate and review the food trucks. \n\nThis app is intended for Austinites looking for a good bite anywhere in the city!\n"</string>
    <string name="janineName">"Janine Bariuan"</string>
    <string name="janineBiography">"Major: Electrical and Computer Engineering \nBio: Hello! I’m a 3rd year ECE major, with a focus in software engineering. In my free time, I like to go out and explore Austin with my friends, read, be a Longhorn, and when I can, go to the many amazing food trucks that Austin has!\nResponsibilities: Backend and frontend development\nNumber of unit tests: 0"</string>
    <string name="rafaelName">"Rafael Herrejon"</string>
    <string name="rafaelBiography">"Major: Electrical and Computer Engineering \nBio: Hey, I’m Rafael. When I’m not at school I enjoy listening to music, exercising, and eating Tacos\nResponsibilities: Frontend development\nNumber of unit tests: 0"</string>
    <string name="syedName">"Syed Naqvi"</string>
    <string name="syedBiography">"Major: Electrical and Computer Engineering \nBio: Hey ya’ll! My name is Syed. I am a final year Electrical and Computer engineering major, with a focus in software engineering. In my free time I love to spend time with my family, friends, and watch all things HBO and Netflix. I also love to go out and eat with said family and friends at all the local amazing food trucks!\nResponsibilities: Frontend Development and system design\nNumber of unit tests: 0"</string>
    <string name="andreaName">"Andrea Nguyen"</string>
    <string name="andreaBiography">"Major: Electrical and Computer Engineering \nBio: Hello! I’m Andrea and I’m a 3rd year ECE major. In my free time I like to explore Austin, find new places to eat, play tennis, or sit at home and binge TV shows\nResponsibilities: Frontend development and mockups\nNumber of unit tests: 0"</string>
    <string name="lukeName">"Luke Norrell"</string>
    <string name="lukeBiography">"Major: Electrical and Computer Engineering \nBio: My name is Luke! I’m a software design technical core and a huge a cappella guy. I really like traveling, and I live on a farm where wifi is not available (hence why I love traveling)\nResponsibilities: Testing, UI design, and mockups\nNumber of unit tests: 0"</string>
    <string name="kennyName">"Kenny Tang"</string>
    <string name="kennyBiography">"Major: Electrical and Computer Engineering \nBio: What's up, I'm Kenny. I love playing Ultimate Frisbee, programming in C, and eating every type of food.\nResponsibilities: Full Stack\nNumber of unit tests: 0"</string>
    <string name="yasiraName">"Yasira Younus"</string>
    <string name="yasiraBiography">"Major: Electrical and Computer Engineering \nBio: Hi, I am Yasira, and I love coding and memes\nResponsibilities: UI setup\nNumber of unit tests: 0"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_map">Explore</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_user_profile">User Profile</string>
    <string name="title_login">Login</string>
    <string name="abtTitle">About Us</string>
    <string name="abtGroupName">Team Lavender</string>
    <string name="title_more">More</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dataSources">"Data Sources:"</string>
    <string name="placesAPILink">Places API: <a href="https://developers.google.com/places/web-service/intro">Link</a> </string>
    <string name="yelpAPILink">Yelp API: <a href="https://www.yelp.com/developers">Link</a>\nThese data sources are scraped through the scraperapp program.</string>
    <string name="toolsDescription">"Tools Description: Android Studio is used to create the application.\nAdobe XD is used to create the mockups.\nDraw.io is used to create the database model UML diagrams, UML class diagrams, and the use case diagram."</string>
    <string name="githubLink">Github Link: https://github.com/MunchApp/munch-app </string>
    <string name="githubServerLink">Github Server Link: https://github.com/MunchApp/munchserver</string>

    <string name="sort_prompt">Sort By</string>

    <string-array name="sort_options">
        <item>Distance</item>
        <item>Highest Rated</item>
        <item>Number of Reviews</item>
    </string-array>


    <string name="janineCommits">Number of commits:</string>
    <string name="janineIssues">Number of issues:\n</string>
    <string name="rafaelCommits">Number of commits:</string>
    <string name="rafaelIssues">Number of issues:\n</string>
    <string name="syedCommits">Number of commits:0</string>
    <string name="syedIssues">Number of issues:\n</string>
    <string name="andreaCommits">Number of commits:</string>
    <string name="andreaIssues">Number of issues:\n</string>
    <string name="lukeCommits">Number of commits:</string>
    <string name="lukeIssues">Number of issues:\n</string>
    <string name="kennyCommits">Number of commits:0</string>
    <string name="kennyIssues">Number of issues:\n</string>
    <string name="yasiraCommits">Number of commits:</string>
    <string name="yasiraIssues">Number of issues:\n</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>


    <string name="accountSettings">Account Settings</string>
    <string name="personalInfo">PERSONAL INFORMATION</string>
    <string name="yourReviews">YOUR REVIEWS</string>
    <string name="yourPhotos">YOUR PHOTOS</string>
    <string name="notifications">NOTIFICATIONS</string>

    <string name="ownerSettings">Owner Settings</string>
    <string name="manageTruck">MANAGE YOUR FOOD TRUCK</string>
    <string name="listTruck">LIST A NEW TRUCK</string>
    <string name="learn">LEARN ABOUT LISTING</string>
    <string name="title_activity_add_review">AddReviewActivity</string>

</resources>
